// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeStreamFields > should serialize a fully populated envelope 1`] = `
[
  "payload",
  "eyJoZWxsbyI6IndvcmxkIn0=",
  "headers",
  "{"x-trace-id":"abc-123"}",
  "topic",
  "orders.created",
  "attempt",
  "3",
  "maxRetries",
  "5",
  "retryStrategy",
  "exponential",
  "retryDelay",
  "500",
  "retryDelayMax",
  "10000",
  "retryMultiplier",
  "3",
  "retryJitter",
  "true",
  "priority",
  "7",
  "timestamp",
  "1700000000000",
  "expiry",
  "60000",
  "broadcast",
  "true",
  "replyTo",
  "reply-queue",
  "correlationId",
  "corr-456",
  "identifierValue",
  "",
]
`;

exports[`serializeStreamFields > should serialize a minimal envelope 1`] = `
[
  "payload",
  "eyJoZWxsbyI6IndvcmxkIn0=",
  "headers",
  "{"x-trace-id":"abc-123"}",
  "topic",
  "orders.created",
  "attempt",
  "0",
  "maxRetries",
  "0",
  "retryStrategy",
  "constant",
  "retryDelay",
  "1000",
  "retryDelayMax",
  "30000",
  "retryMultiplier",
  "2",
  "retryJitter",
  "false",
  "priority",
  "0",
  "timestamp",
  "1700000000000",
  "expiry",
  "",
  "broadcast",
  "false",
  "replyTo",
  "",
  "correlationId",
  "",
  "identifierValue",
  "",
]
`;
